task10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-frontend-ingress
  namespace: p-fayoz
spec:
  ingressClassName: nginx
  rules:
  - host: almost-last-practice-fabsoatov.sts404.uz
    http:
      paths:
      - path: /config
        pathType: Exact
        backend:
          service:
            name: flask-application-2
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
